--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Sinatra</title>
+</head>
+	<body>
 <h1>Welcome to <%= @crm_app_name %></h1>
 <p>Main menu</p>
-<ul>
-  <li><a href="/contacts">View all contacts</a></li>
-  <!-- please complete me with links to other actions -->
-</ul>
+		<ul>
+	  	<li><a href="/contacts">View all contacts</a></li>
+	  	<li><a href="/contacts/new">Add a contact</a></li>
+		</ul>	
+	</body>
+</html>
+
