--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,16 @@
-<h1>Welcome to <%= @crm_app_name %></h1>
+<header>
+	<h1>Welcome to <%= @crm_app_name %></h1>	
+</header>
 <p>Main menu</p>
+	<nav>	
 		<ul>
 	  	<li><a href="/contacts">View all contacts</a></li>
 	  	<li><a href="/contacts/new">Add a contact</a></li>
 		</ul>	
+	</nav>
+
+<footer>
+	
+</footer>
 
 
