--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
-<h1>Create new Contact</h1>
+<header>
+	<h1>Create new Contact</h1>
+</header>
 
 <form action="/contacts" method="post">
   <input type="text" name="first_name">
@@ -14,6 +9,14 @@
   <input type="text" name="note">
   <input type="submit" name="Submit">
 </form>	
-</body>
-</html>
+
+<nav>
+	
+</nav>
+
+<footer>
+	
+</footer>
+
+
 
