Rough outline for night themed CRM

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,10 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 	<title><%= @title %></title>
 </head>
+
 <body>
-	<%= yield %>
+
+
+<%= yield %>	
+
+<footer>
+	<p>CJS Development &copy; 2015</p>
+</footer>
+	
+
 </body>
 </html>
+
+
 
