--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,22 +1,23 @@
 <header>
 	<h1>Create new Contact</h1>
 </header>
+<fieldset>
+<legend>Contact details</legend>
+	<form action="/contacts" method="post">
+		<label>First Name:<br />
+	  <input type="text" name="first_name">
+	  <label>Last Name:<br />
+	  <input type="text" name="last_name">
+	  <label>Email:<br />
+	  <input type="text" name="email">
+	  <label>Note:<br />
+	  <input type="text" name="note">
+	  <input type="submit" name="Submit">
+	</form>	
+</fieldset>
 
-<form action="/contacts" method="post">
-  <input type="text" name="first_name">
-  <input type="text" name="last_name">
-  <input type="text" name="email">
-  <input type="text" name="note">
-  <input type="submit" name="Submit">
-</form>	
 
-<nav>
-	
-</nav>
 
-<footer>
-	
-</footer>
 
 
 
