--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,15 +1,20 @@
 <header>
 	<h1>All Contacts</h1>
 </header>
-
-<nav>
-	<ul>
-	  <% $rolodex.contacts.each do |contact| %>
-	    <li><%= contact.first_name %> <%= contact.last_name %></li>
-	  <% end %>
-	</ul>
-</nav>
-
-<footer>
+<div id= "content">
 	
-</footer>
+	<nav>
+		<ul>
+			  <% $rolodex.contacts.each do |contact| %>
+			    <li><%= contact.first_name %> <%= contact.last_name %>
+					<%= contact.email %> <%= contact.note %>
+			    </li>
+			  <% end %>
+		</ul>
+	</nav>
+
+
+
+
+
+
