--- a/public/style.css
+++ b/public/style.css
@@ -29,7 +29,7 @@ ul {
 }
 
  
-header p { 
+header { 
   text-transform: uppercase; 
   font-weight: 400; 
 }
@@ -41,10 +41,6 @@ nav {
   margin:0 auto;
   margin-bottom:100px;
 }
-
-nav ul li a { font-size: 11pt; }
-nav li a:hover { opacity:0.9; }
-nav ul li { line-height: 1.4; }
 
 nav ul li {
   float:left; 
