--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -8,3 +8,5 @@
   <input type="submit" name="Delete Contact" value="Delete Contact">
 </form>
 
+<a href=<%= @contact.id %>/edit>Edit Contacts</a> 
+
