--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -4,10 +4,9 @@
 
 	<nav>
 		<ul>
-			  <% $rolodex.contacts.each do |contact| %>
+			  <% @contacts.each do |contact| %>
 			    <li><a href="/contacts/<%= contact.id %>">
 			    <%= contact.first_name %> <%= contact.last_name %> </a>
-					<%= contact.email %> <%= contact.note %>
 			    </li>
 			  <% end %>			
 		</ul>
