Updating and deleting a contact and rolodex removal

--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -8,11 +8,13 @@
 			    <li><a href="/contacts/<%= contact.id %>">
 			    <%= contact.first_name %> <%= contact.last_name %> </a>
 			    </li>
-			  <% end %>			
+			  <% end %>		
+			  
 		</ul>
 	</nav>
 		 
-
+<a href="http://localhost:4567"> Back to Homepage</a>
+			    	
 					
 
  
