--- a/views/edit_contact.erb
+++ b/views/edit_contact.erb
@@ -8,3 +8,6 @@
   <input type="text" name="note" value="<%= @contact.note %>">
   <input type="submit" name="Submit">
 </form>
+
+
+<a href="http://localhost:4567"> Back to Homepage</a>
