--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -8,5 +8,6 @@
   <input type="submit" name="Delete Contact" value="Delete Contact">
 </form>
 
-<a href=<%= @contact.id %>/edit>Edit Contacts</a> 
-
+<a href=<%= @contact.id %>/edit>Edit Contacts</a> <br />
+<br />
+<a href="http://localhost:4567"> Back to Homepage</a>
